--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="post">
+<section class="post">
 <h1>Topic: {{ page.tag }}</h1>
 <ul>
 {% for post in site.tags[page.tag] %}
@@ -10,5 +10,5 @@ layout: default
   </li>
 {% endfor %}
 </ul>
-</div>
+</section>
 <hr>
