--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -1,13 +1,11 @@
 ---
 layout: default
 ---
-<section class="post">
+<section class="posts">
 <h1>Topic: {{ page.tag }}</h1>
 <ul>
 {% for post in site.tags[page.tag] %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a> ({{ post.date | date_to_string }})<br>
-    {{ post.description }}
-  </li>
+  <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%m-%d-%Y" }}</time></li>
 {% endfor %}
 </ul>
 </section>
