--- a/_layouts/tagpage.html
+++ b/_layouts/tagpage.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section class="posts">
-<h1>Topic: {{ page.tag }}</h1>
+<h1> {{ page.tag }}</h1>
 <ul>
 {% for post in site.tags[page.tag] %}
   <li><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a><time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%m-%d-%Y" }}</time></li>
